build/xcw_parser.output
Terminals unused in grammar

   LE
   LEQ
   GE
   GEQ
   EQ
   NEQ
   AND
   OR
   NOT
   WHILE
   BREAK
   CONT
   PERIOD


State 105 conflicts: 1 shift/reduce
State 114 conflicts: 8 shift/reduce
State 126 conflicts: 9 shift/reduce
State 149 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: CompDecl
    2         | CompUnit CompDecl

    3 CompDecl: Decl
    4         | FuncDef

    5 Decl: ConstDecl
    6     | VarDecl

    7 ConstDecl: CONST INT ConstDefs SEMI

    8 ConstDefs: ConstDef
    9          | ConstDefs COMMA ConstDef

   10 ConstDef: IDENT ASSIGN ConstInitVal

   11 $@1: %empty

   12 $@2: %empty

   13 ConstDef: IDENT ArrayDef ASSIGN $@1 LCURLY $@2 ArrayInit RCURLY

   14 ConstInitVal: ConstExp

   15 ConstExp: AddExp

   16 VarDecl: INT VarDefs SEMI

   17 VarDefs: VarDef
   18        | VarDefs COMMA VarDef

   19 VarDef: IDENT
   20       | IDENT ASSIGN InitVal
   21       | IDENT ArrayDef

   22 $@3: %empty

   23 $@4: %empty

   24 VarDef: IDENT ArrayDef ASSIGN $@3 LCURLY $@4 ArrayInit RCURLY

   25 ArrayInit: %empty
   26          | ArrayExps

   27 ArrayExps: ArrayExp
   28          | ArrayExps COMMA ArrayExp

   29 ArrayExp: Exp

   30 $@5: %empty

   31 ArrayExp: LCURLY $@5 ArrayInit RCURLY

   32 ArrayDef: ArrayUnit
   33         | ArrayDef ArrayUnit

   34 ArrayUnit: LBRAC ConstExp RBRAC

   35 InitVal: Exp

   36 Exp: AddExp

   37 AddExp: MulExp
   38       | AddExp ADD MulExp
   39       | AddExp SUB MulExp

   40 MulExp: UnaryExp
   41       | MulExp MUL UnaryExp
   42       | MulExp DIV UnaryExp
   43       | MulExp MOD UnaryExp

   44 UnaryExp: PrimaryExp
   45         | IDENT LPAREN FuncRParams RPAREN

   46 PrimaryExp: NUMBER
   47           | LVal

   48 LVal: IDENT

   49 $@6: %empty

   50 LVal: IDENT $@6 ArrayLVals

   51 ArrayLVals: ArrayLVal
   52           | ArrayLVals ArrayLVal

   53 ArrayLVal: LBRAC Exp RBRAC

   54 $@7: %empty

   55 $@8: %empty

   56 $@9: %empty

   57 FuncDef: INT IDENT $@7 LPAREN $@8 FuncFParams RPAREN $@9 Block

   58 $@10: %empty

   59 $@11: %empty

   60 $@12: %empty

   61 FuncDef: VOID IDENT $@10 LPAREN $@11 FuncFParams RPAREN $@12 Block

   62 FuncFParams: %empty
   63            | FuncFParam
   64            | FuncFParams COMMA FuncFParam

   65 FuncFParam: INT IDENT
   66           | INT IDENT LBRAC RBRAC ArrayParamDef

   67 ArrayParamDef: ArrayUnit
   68              | ArrayParamDef ArrayUnit
   69              | %empty

   70 $@13: %empty

   71 Block: LCURLY $@13 BlockItems RCURLY

   72 BlockItems: BlockItem
   73           | BlockItems BlockItem

   74 BlockItem: %empty
   75          | Decl
   76          | Stmt

   77 Stmt: RETURN SEMI
   78     | RETURN Exp SEMI
   79     | Exp SEMI
   80     | SEMI
   81     | Block

   82 $@14: %empty

   83 Stmt: LVal $@14 ASSIGN Exp SEMI

   84 $@15: %empty

   85 $@16: %empty

   86 Stmt: IF LPAREN Cond RPAREN $@15 Stmt $@16 IF_Else

   87 IF_Else: %empty
   88        | ELSE Stmt

   89 Cond: LOrExp

   90 LOrExp: LAndExp

   91 LAndExp: EqExp

   92 EqExp: RelExp

   93 RelExp: AddExp

   94 FuncRParams: %empty
   95            | Exp
   96            | FuncRParams COMMA Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 38
SUB (259) 39
MUL (260) 41
DIV (261) 42
MOD (262) 43
IDENT (263) 10 13 19 20 21 24 45 48 50 57 61 65 66
LPAREN (264) 45 57 61 86
RPAREN (265) 45 57 61 86
LCURLY (266) 13 24 31 71
RCURLY (267) 13 24 31 71
LBRAC (268) 34 53 66
RBRAC (269) 34 53 66
INT (270) 7 16 57 65 66
CONST (271) 7
VOID (272) 61
LE (273)
LEQ (274)
GE (275)
GEQ (276)
EQ (277)
NEQ (278)
AND (279)
OR (280)
NOT (281)
IF (282) 86
ELSE (283) 88
WHILE (284)
BREAK (285)
CONT (286)
RETURN (287) 77 78
ASSIGN (288) 10 13 20 24 83
SEMI (289) 7 16 77 78 79 80 83
COMMA (290) 9 18 28 64 96
PERIOD (291)
NUMBER (292) 46


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
CompUnit (39)
    on left: 1 2, on right: 0 2
CompDecl (40)
    on left: 3 4, on right: 1 2
Decl (41)
    on left: 5 6, on right: 3 75
ConstDecl (42)
    on left: 7, on right: 5
ConstDefs (43)
    on left: 8 9, on right: 7 9
ConstDef (44)
    on left: 10 13, on right: 8 9
$@1 (45)
    on left: 11, on right: 13
$@2 (46)
    on left: 12, on right: 13
ConstInitVal (47)
    on left: 14, on right: 10
ConstExp (48)
    on left: 15, on right: 14 34
VarDecl (49)
    on left: 16, on right: 6
VarDefs (50)
    on left: 17 18, on right: 16 18
VarDef (51)
    on left: 19 20 21 24, on right: 17 18
$@3 (52)
    on left: 22, on right: 24
$@4 (53)
    on left: 23, on right: 24
ArrayInit (54)
    on left: 25 26, on right: 13 24 31
ArrayExps (55)
    on left: 27 28, on right: 26 28
ArrayExp (56)
    on left: 29 31, on right: 27 28
$@5 (57)
    on left: 30, on right: 31
ArrayDef (58)
    on left: 32 33, on right: 13 21 24 33
ArrayUnit (59)
    on left: 34, on right: 32 33 67 68
InitVal (60)
    on left: 35, on right: 20
Exp (61)
    on left: 36, on right: 29 35 53 78 79 83 95 96
AddExp (62)
    on left: 37 38 39, on right: 15 36 38 39 93
MulExp (63)
    on left: 40 41 42 43, on right: 37 38 39 41 42 43
UnaryExp (64)
    on left: 44 45, on right: 40 41 42 43
PrimaryExp (65)
    on left: 46 47, on right: 44
LVal (66)
    on left: 48 50, on right: 47 83
$@6 (67)
    on left: 49, on right: 50
ArrayLVals (68)
    on left: 51 52, on right: 50 52
ArrayLVal (69)
    on left: 53, on right: 51 52
FuncDef (70)
    on left: 57 61, on right: 4
$@7 (71)
    on left: 54, on right: 57
$@8 (72)
    on left: 55, on right: 57
$@9 (73)
    on left: 56, on right: 57
$@10 (74)
    on left: 58, on right: 61
$@11 (75)
    on left: 59, on right: 61
$@12 (76)
    on left: 60, on right: 61
FuncFParams (77)
    on left: 62 63 64, on right: 57 61 64
FuncFParam (78)
    on left: 65 66, on right: 63 64
ArrayParamDef (79)
    on left: 67 68 69, on right: 66 68
Block (80)
    on left: 71, on right: 57 61 81
$@13 (81)
    on left: 70, on right: 71
BlockItems (82)
    on left: 72 73, on right: 71 73
BlockItem (83)
    on left: 74 75 76, on right: 72 73
Stmt (84)
    on left: 77 78 79 80 81 83 86, on right: 76 86 88
$@14 (85)
    on left: 82, on right: 83
$@15 (86)
    on left: 84, on right: 86
$@16 (87)
    on left: 85, on right: 86
IF_Else (88)
    on left: 87 88, on right: 86
Cond (89)
    on left: 89, on right: 86
LOrExp (90)
    on left: 90, on right: 89
LAndExp (91)
    on left: 91, on right: 90
EqExp (92)
    on left: 92, on right: 91
RelExp (93)
    on left: 93, on right: 92
FuncRParams (94)
    on left: 94 95 96, on right: 45 96


State 0

    0 $accept: . CompUnit $end

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    CompUnit   go to state 4
    CompDecl   go to state 5
    Decl       go to state 6
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 1

   16 VarDecl: INT . VarDefs SEMI
   57 FuncDef: INT . IDENT $@7 LPAREN $@8 FuncFParams RPAREN $@9 Block

    IDENT  shift, and go to state 10

    VarDefs  go to state 11
    VarDef   go to state 12


State 2

    7 ConstDecl: CONST . INT ConstDefs SEMI

    INT  shift, and go to state 13


State 3

   61 FuncDef: VOID . IDENT $@10 LPAREN $@11 FuncFParams RPAREN $@12 Block

    IDENT  shift, and go to state 14


State 4

    0 $accept: CompUnit . $end
    2 CompUnit: CompUnit . CompDecl

    $end   shift, and go to state 15
    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    CompDecl   go to state 16
    Decl       go to state 6
    ConstDecl  go to state 7
    VarDecl    go to state 8
    FuncDef    go to state 9


State 5

    1 CompUnit: CompDecl .

    $default  reduce using rule 1 (CompUnit)


State 6

    3 CompDecl: Decl .

    $default  reduce using rule 3 (CompDecl)


State 7

    5 Decl: ConstDecl .

    $default  reduce using rule 5 (Decl)


State 8

    6 Decl: VarDecl .

    $default  reduce using rule 6 (Decl)


State 9

    4 CompDecl: FuncDef .

    $default  reduce using rule 4 (CompDecl)


State 10

   19 VarDef: IDENT .
   20       | IDENT . ASSIGN InitVal
   21       | IDENT . ArrayDef
   24       | IDENT . ArrayDef ASSIGN $@3 LCURLY $@4 ArrayInit RCURLY
   57 FuncDef: INT IDENT . $@7 LPAREN $@8 FuncFParams RPAREN $@9 Block

    LBRAC   shift, and go to state 17
    ASSIGN  shift, and go to state 18

    LPAREN    reduce using rule 54 ($@7)
    $default  reduce using rule 19 (VarDef)

    ArrayDef   go to state 19
    ArrayUnit  go to state 20
    $@7        go to state 21


State 11

   16 VarDecl: INT VarDefs . SEMI
   18 VarDefs: VarDefs . COMMA VarDef

    SEMI   shift, and go to state 22
    COMMA  shift, and go to state 23


State 12

   17 VarDefs: VarDef .

    $default  reduce using rule 17 (VarDefs)


State 13

    7 ConstDecl: CONST INT . ConstDefs SEMI

    IDENT  shift, and go to state 24

    ConstDefs  go to state 25
    ConstDef   go to state 26


State 14

   61 FuncDef: VOID IDENT . $@10 LPAREN $@11 FuncFParams RPAREN $@12 Block

    $default  reduce using rule 58 ($@10)

    $@10  go to state 27


State 15

    0 $accept: CompUnit $end .

    $default  accept


State 16

    2 CompUnit: CompUnit CompDecl .

    $default  reduce using rule 2 (CompUnit)


State 17

   34 ArrayUnit: LBRAC . ConstExp RBRAC

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    ConstExp    go to state 30
    AddExp      go to state 31
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 18

   20 VarDef: IDENT ASSIGN . InitVal

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    InitVal     go to state 36
    Exp         go to state 37
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 19

   21 VarDef: IDENT ArrayDef .
   24       | IDENT ArrayDef . ASSIGN $@3 LCURLY $@4 ArrayInit RCURLY
   33 ArrayDef: ArrayDef . ArrayUnit

    LBRAC   shift, and go to state 17
    ASSIGN  shift, and go to state 39

    $default  reduce using rule 21 (VarDef)

    ArrayUnit  go to state 40


State 20

   32 ArrayDef: ArrayUnit .

    $default  reduce using rule 32 (ArrayDef)


State 21

   57 FuncDef: INT IDENT $@7 . LPAREN $@8 FuncFParams RPAREN $@9 Block

    LPAREN  shift, and go to state 41


State 22

   16 VarDecl: INT VarDefs SEMI .

    $default  reduce using rule 16 (VarDecl)


State 23

   18 VarDefs: VarDefs COMMA . VarDef

    IDENT  shift, and go to state 42

    VarDef  go to state 43


State 24

   10 ConstDef: IDENT . ASSIGN ConstInitVal
   13         | IDENT . ArrayDef ASSIGN $@1 LCURLY $@2 ArrayInit RCURLY

    LBRAC   shift, and go to state 17
    ASSIGN  shift, and go to state 44

    ArrayDef   go to state 45
    ArrayUnit  go to state 20


State 25

    7 ConstDecl: CONST INT ConstDefs . SEMI
    9 ConstDefs: ConstDefs . COMMA ConstDef

    SEMI   shift, and go to state 46
    COMMA  shift, and go to state 47


State 26

    8 ConstDefs: ConstDef .

    $default  reduce using rule 8 (ConstDefs)


State 27

   61 FuncDef: VOID IDENT $@10 . LPAREN $@11 FuncFParams RPAREN $@12 Block

    LPAREN  shift, and go to state 48


State 28

   45 UnaryExp: IDENT . LPAREN FuncRParams RPAREN
   48 LVal: IDENT .
   50     | IDENT . $@6 ArrayLVals

    LPAREN  shift, and go to state 49

    LBRAC     reduce using rule 49 ($@6)
    $default  reduce using rule 48 (LVal)

    $@6  go to state 50


State 29

   46 PrimaryExp: NUMBER .

    $default  reduce using rule 46 (PrimaryExp)


State 30

   34 ArrayUnit: LBRAC ConstExp . RBRAC

    RBRAC  shift, and go to state 51


State 31

   15 ConstExp: AddExp .
   38 AddExp: AddExp . ADD MulExp
   39       | AddExp . SUB MulExp

    ADD  shift, and go to state 52
    SUB  shift, and go to state 53

    $default  reduce using rule 15 (ConstExp)


State 32

   37 AddExp: MulExp .
   41 MulExp: MulExp . MUL UnaryExp
   42       | MulExp . DIV UnaryExp
   43       | MulExp . MOD UnaryExp

    MUL  shift, and go to state 54
    DIV  shift, and go to state 55
    MOD  shift, and go to state 56

    $default  reduce using rule 37 (AddExp)


State 33

   40 MulExp: UnaryExp .

    $default  reduce using rule 40 (MulExp)


State 34

   44 UnaryExp: PrimaryExp .

    $default  reduce using rule 44 (UnaryExp)


State 35

   47 PrimaryExp: LVal .

    $default  reduce using rule 47 (PrimaryExp)


State 36

   20 VarDef: IDENT ASSIGN InitVal .

    $default  reduce using rule 20 (VarDef)


State 37

   35 InitVal: Exp .

    $default  reduce using rule 35 (InitVal)


State 38

   36 Exp: AddExp .
   38 AddExp: AddExp . ADD MulExp
   39       | AddExp . SUB MulExp

    ADD  shift, and go to state 52
    SUB  shift, and go to state 53

    $default  reduce using rule 36 (Exp)


State 39

   24 VarDef: IDENT ArrayDef ASSIGN . $@3 LCURLY $@4 ArrayInit RCURLY

    $default  reduce using rule 22 ($@3)

    $@3  go to state 57


State 40

   33 ArrayDef: ArrayDef ArrayUnit .

    $default  reduce using rule 33 (ArrayDef)


State 41

   57 FuncDef: INT IDENT $@7 LPAREN . $@8 FuncFParams RPAREN $@9 Block

    $default  reduce using rule 55 ($@8)

    $@8  go to state 58


State 42

   19 VarDef: IDENT .
   20       | IDENT . ASSIGN InitVal
   21       | IDENT . ArrayDef
   24       | IDENT . ArrayDef ASSIGN $@3 LCURLY $@4 ArrayInit RCURLY

    LBRAC   shift, and go to state 17
    ASSIGN  shift, and go to state 18

    $default  reduce using rule 19 (VarDef)

    ArrayDef   go to state 19
    ArrayUnit  go to state 20


State 43

   18 VarDefs: VarDefs COMMA VarDef .

    $default  reduce using rule 18 (VarDefs)


State 44

   10 ConstDef: IDENT ASSIGN . ConstInitVal

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    ConstInitVal  go to state 59
    ConstExp      go to state 60
    AddExp        go to state 31
    MulExp        go to state 32
    UnaryExp      go to state 33
    PrimaryExp    go to state 34
    LVal          go to state 35


State 45

   13 ConstDef: IDENT ArrayDef . ASSIGN $@1 LCURLY $@2 ArrayInit RCURLY
   33 ArrayDef: ArrayDef . ArrayUnit

    LBRAC   shift, and go to state 17
    ASSIGN  shift, and go to state 61

    ArrayUnit  go to state 40


State 46

    7 ConstDecl: CONST INT ConstDefs SEMI .

    $default  reduce using rule 7 (ConstDecl)


State 47

    9 ConstDefs: ConstDefs COMMA . ConstDef

    IDENT  shift, and go to state 24

    ConstDef  go to state 62


State 48

   61 FuncDef: VOID IDENT $@10 LPAREN . $@11 FuncFParams RPAREN $@12 Block

    $default  reduce using rule 59 ($@11)

    $@11  go to state 63


State 49

   45 UnaryExp: IDENT LPAREN . FuncRParams RPAREN

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    $default  reduce using rule 94 (FuncRParams)

    Exp          go to state 64
    AddExp       go to state 38
    MulExp       go to state 32
    UnaryExp     go to state 33
    PrimaryExp   go to state 34
    LVal         go to state 35
    FuncRParams  go to state 65


State 50

   50 LVal: IDENT $@6 . ArrayLVals

    LBRAC  shift, and go to state 66

    ArrayLVals  go to state 67
    ArrayLVal   go to state 68


State 51

   34 ArrayUnit: LBRAC ConstExp RBRAC .

    $default  reduce using rule 34 (ArrayUnit)


State 52

   38 AddExp: AddExp ADD . MulExp

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    MulExp      go to state 69
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 53

   39 AddExp: AddExp SUB . MulExp

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    MulExp      go to state 70
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 54

   41 MulExp: MulExp MUL . UnaryExp

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    UnaryExp    go to state 71
    PrimaryExp  go to state 34
    LVal        go to state 35


State 55

   42 MulExp: MulExp DIV . UnaryExp

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    UnaryExp    go to state 72
    PrimaryExp  go to state 34
    LVal        go to state 35


State 56

   43 MulExp: MulExp MOD . UnaryExp

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    UnaryExp    go to state 73
    PrimaryExp  go to state 34
    LVal        go to state 35


State 57

   24 VarDef: IDENT ArrayDef ASSIGN $@3 . LCURLY $@4 ArrayInit RCURLY

    LCURLY  shift, and go to state 74


State 58

   57 FuncDef: INT IDENT $@7 LPAREN $@8 . FuncFParams RPAREN $@9 Block

    INT  shift, and go to state 75

    $default  reduce using rule 62 (FuncFParams)

    FuncFParams  go to state 76
    FuncFParam   go to state 77


State 59

   10 ConstDef: IDENT ASSIGN ConstInitVal .

    $default  reduce using rule 10 (ConstDef)


State 60

   14 ConstInitVal: ConstExp .

    $default  reduce using rule 14 (ConstInitVal)


State 61

   13 ConstDef: IDENT ArrayDef ASSIGN . $@1 LCURLY $@2 ArrayInit RCURLY

    $default  reduce using rule 11 ($@1)

    $@1  go to state 78


State 62

    9 ConstDefs: ConstDefs COMMA ConstDef .

    $default  reduce using rule 9 (ConstDefs)


State 63

   61 FuncDef: VOID IDENT $@10 LPAREN $@11 . FuncFParams RPAREN $@12 Block

    INT  shift, and go to state 75

    $default  reduce using rule 62 (FuncFParams)

    FuncFParams  go to state 79
    FuncFParam   go to state 77


State 64

   95 FuncRParams: Exp .

    $default  reduce using rule 95 (FuncRParams)


State 65

   45 UnaryExp: IDENT LPAREN FuncRParams . RPAREN
   96 FuncRParams: FuncRParams . COMMA Exp

    RPAREN  shift, and go to state 80
    COMMA   shift, and go to state 81


State 66

   53 ArrayLVal: LBRAC . Exp RBRAC

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    Exp         go to state 82
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 67

   50 LVal: IDENT $@6 ArrayLVals .
   52 ArrayLVals: ArrayLVals . ArrayLVal

    LBRAC  shift, and go to state 66

    $default  reduce using rule 50 (LVal)

    ArrayLVal  go to state 83


State 68

   51 ArrayLVals: ArrayLVal .

    $default  reduce using rule 51 (ArrayLVals)


State 69

   38 AddExp: AddExp ADD MulExp .
   41 MulExp: MulExp . MUL UnaryExp
   42       | MulExp . DIV UnaryExp
   43       | MulExp . MOD UnaryExp

    MUL  shift, and go to state 54
    DIV  shift, and go to state 55
    MOD  shift, and go to state 56

    $default  reduce using rule 38 (AddExp)


State 70

   39 AddExp: AddExp SUB MulExp .
   41 MulExp: MulExp . MUL UnaryExp
   42       | MulExp . DIV UnaryExp
   43       | MulExp . MOD UnaryExp

    MUL  shift, and go to state 54
    DIV  shift, and go to state 55
    MOD  shift, and go to state 56

    $default  reduce using rule 39 (AddExp)


State 71

   41 MulExp: MulExp MUL UnaryExp .

    $default  reduce using rule 41 (MulExp)


State 72

   42 MulExp: MulExp DIV UnaryExp .

    $default  reduce using rule 42 (MulExp)


State 73

   43 MulExp: MulExp MOD UnaryExp .

    $default  reduce using rule 43 (MulExp)


State 74

   24 VarDef: IDENT ArrayDef ASSIGN $@3 LCURLY . $@4 ArrayInit RCURLY

    $default  reduce using rule 23 ($@4)

    $@4  go to state 84


State 75

   65 FuncFParam: INT . IDENT
   66           | INT . IDENT LBRAC RBRAC ArrayParamDef

    IDENT  shift, and go to state 85


State 76

   57 FuncDef: INT IDENT $@7 LPAREN $@8 FuncFParams . RPAREN $@9 Block
   64 FuncFParams: FuncFParams . COMMA FuncFParam

    RPAREN  shift, and go to state 86
    COMMA   shift, and go to state 87


State 77

   63 FuncFParams: FuncFParam .

    $default  reduce using rule 63 (FuncFParams)


State 78

   13 ConstDef: IDENT ArrayDef ASSIGN $@1 . LCURLY $@2 ArrayInit RCURLY

    LCURLY  shift, and go to state 88


State 79

   61 FuncDef: VOID IDENT $@10 LPAREN $@11 FuncFParams . RPAREN $@12 Block
   64 FuncFParams: FuncFParams . COMMA FuncFParam

    RPAREN  shift, and go to state 89
    COMMA   shift, and go to state 87


State 80

   45 UnaryExp: IDENT LPAREN FuncRParams RPAREN .

    $default  reduce using rule 45 (UnaryExp)


State 81

   96 FuncRParams: FuncRParams COMMA . Exp

    IDENT   shift, and go to state 28
    NUMBER  shift, and go to state 29

    Exp         go to state 90
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 82

   53 ArrayLVal: LBRAC Exp . RBRAC

    RBRAC  shift, and go to state 91


State 83

   52 ArrayLVals: ArrayLVals ArrayLVal .

    $default  reduce using rule 52 (ArrayLVals)


State 84

   24 VarDef: IDENT ArrayDef ASSIGN $@3 LCURLY $@4 . ArrayInit RCURLY

    IDENT   shift, and go to state 28
    LCURLY  shift, and go to state 92
    NUMBER  shift, and go to state 29

    $default  reduce using rule 25 (ArrayInit)

    ArrayInit   go to state 93
    ArrayExps   go to state 94
    ArrayExp    go to state 95
    Exp         go to state 96
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 85

   65 FuncFParam: INT IDENT .
   66           | INT IDENT . LBRAC RBRAC ArrayParamDef

    LBRAC  shift, and go to state 97

    $default  reduce using rule 65 (FuncFParam)


State 86

   57 FuncDef: INT IDENT $@7 LPAREN $@8 FuncFParams RPAREN . $@9 Block

    $default  reduce using rule 56 ($@9)

    $@9  go to state 98


State 87

   64 FuncFParams: FuncFParams COMMA . FuncFParam

    INT  shift, and go to state 75

    FuncFParam  go to state 99


State 88

   13 ConstDef: IDENT ArrayDef ASSIGN $@1 LCURLY . $@2 ArrayInit RCURLY

    $default  reduce using rule 12 ($@2)

    $@2  go to state 100


State 89

   61 FuncDef: VOID IDENT $@10 LPAREN $@11 FuncFParams RPAREN . $@12 Block

    $default  reduce using rule 60 ($@12)

    $@12  go to state 101


State 90

   96 FuncRParams: FuncRParams COMMA Exp .

    $default  reduce using rule 96 (FuncRParams)


State 91

   53 ArrayLVal: LBRAC Exp RBRAC .

    $default  reduce using rule 53 (ArrayLVal)


State 92

   31 ArrayExp: LCURLY . $@5 ArrayInit RCURLY

    $default  reduce using rule 30 ($@5)

    $@5  go to state 102


State 93

   24 VarDef: IDENT ArrayDef ASSIGN $@3 LCURLY $@4 ArrayInit . RCURLY

    RCURLY  shift, and go to state 103


State 94

   26 ArrayInit: ArrayExps .
   28 ArrayExps: ArrayExps . COMMA ArrayExp

    COMMA  shift, and go to state 104

    $default  reduce using rule 26 (ArrayInit)


State 95

   27 ArrayExps: ArrayExp .

    $default  reduce using rule 27 (ArrayExps)


State 96

   29 ArrayExp: Exp .

    $default  reduce using rule 29 (ArrayExp)


State 97

   66 FuncFParam: INT IDENT LBRAC . RBRAC ArrayParamDef

    RBRAC  shift, and go to state 105


State 98

   57 FuncDef: INT IDENT $@7 LPAREN $@8 FuncFParams RPAREN $@9 . Block

    LCURLY  shift, and go to state 106

    Block  go to state 107


State 99

   64 FuncFParams: FuncFParams COMMA FuncFParam .

    $default  reduce using rule 64 (FuncFParams)


State 100

   13 ConstDef: IDENT ArrayDef ASSIGN $@1 LCURLY $@2 . ArrayInit RCURLY

    IDENT   shift, and go to state 28
    LCURLY  shift, and go to state 92
    NUMBER  shift, and go to state 29

    $default  reduce using rule 25 (ArrayInit)

    ArrayInit   go to state 108
    ArrayExps   go to state 94
    ArrayExp    go to state 95
    Exp         go to state 96
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 101

   61 FuncDef: VOID IDENT $@10 LPAREN $@11 FuncFParams RPAREN $@12 . Block

    LCURLY  shift, and go to state 106

    Block  go to state 109


State 102

   31 ArrayExp: LCURLY $@5 . ArrayInit RCURLY

    IDENT   shift, and go to state 28
    LCURLY  shift, and go to state 92
    NUMBER  shift, and go to state 29

    $default  reduce using rule 25 (ArrayInit)

    ArrayInit   go to state 110
    ArrayExps   go to state 94
    ArrayExp    go to state 95
    Exp         go to state 96
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 103

   24 VarDef: IDENT ArrayDef ASSIGN $@3 LCURLY $@4 ArrayInit RCURLY .

    $default  reduce using rule 24 (VarDef)


State 104

   28 ArrayExps: ArrayExps COMMA . ArrayExp

    IDENT   shift, and go to state 28
    LCURLY  shift, and go to state 92
    NUMBER  shift, and go to state 29

    ArrayExp    go to state 111
    Exp         go to state 96
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 105

   66 FuncFParam: INT IDENT LBRAC RBRAC . ArrayParamDef

    LBRAC  shift, and go to state 17

    LBRAC     [reduce using rule 69 (ArrayParamDef)]
    $default  reduce using rule 69 (ArrayParamDef)

    ArrayUnit      go to state 112
    ArrayParamDef  go to state 113


State 106

   71 Block: LCURLY . $@13 BlockItems RCURLY

    $default  reduce using rule 70 ($@13)

    $@13  go to state 114


State 107

   57 FuncDef: INT IDENT $@7 LPAREN $@8 FuncFParams RPAREN $@9 Block .

    $default  reduce using rule 57 (FuncDef)


State 108

   13 ConstDef: IDENT ArrayDef ASSIGN $@1 LCURLY $@2 ArrayInit . RCURLY

    RCURLY  shift, and go to state 115


State 109

   61 FuncDef: VOID IDENT $@10 LPAREN $@11 FuncFParams RPAREN $@12 Block .

    $default  reduce using rule 61 (FuncDef)


State 110

   31 ArrayExp: LCURLY $@5 ArrayInit . RCURLY

    RCURLY  shift, and go to state 116


State 111

   28 ArrayExps: ArrayExps COMMA ArrayExp .

    $default  reduce using rule 28 (ArrayExps)


State 112

   67 ArrayParamDef: ArrayUnit .

    $default  reduce using rule 67 (ArrayParamDef)


State 113

   66 FuncFParam: INT IDENT LBRAC RBRAC ArrayParamDef .
   68 ArrayParamDef: ArrayParamDef . ArrayUnit

    LBRAC  shift, and go to state 17

    $default  reduce using rule 66 (FuncFParam)

    ArrayUnit  go to state 117


State 114

   71 Block: LCURLY $@13 . BlockItems RCURLY

    IDENT   shift, and go to state 28
    LCURLY  shift, and go to state 106
    INT     shift, and go to state 118
    CONST   shift, and go to state 2
    IF      shift, and go to state 119
    RETURN  shift, and go to state 120
    SEMI    shift, and go to state 121
    NUMBER  shift, and go to state 29

    IDENT     [reduce using rule 74 (BlockItem)]
    LCURLY    [reduce using rule 74 (BlockItem)]
    INT       [reduce using rule 74 (BlockItem)]
    CONST     [reduce using rule 74 (BlockItem)]
    IF        [reduce using rule 74 (BlockItem)]
    RETURN    [reduce using rule 74 (BlockItem)]
    SEMI      [reduce using rule 74 (BlockItem)]
    NUMBER    [reduce using rule 74 (BlockItem)]
    $default  reduce using rule 74 (BlockItem)

    Decl        go to state 122
    ConstDecl   go to state 7
    VarDecl     go to state 8
    Exp         go to state 123
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 124
    Block       go to state 125
    BlockItems  go to state 126
    BlockItem   go to state 127
    Stmt        go to state 128


State 115

   13 ConstDef: IDENT ArrayDef ASSIGN $@1 LCURLY $@2 ArrayInit RCURLY .

    $default  reduce using rule 13 (ConstDef)


State 116

   31 ArrayExp: LCURLY $@5 ArrayInit RCURLY .

    $default  reduce using rule 31 (ArrayExp)


State 117

   68 ArrayParamDef: ArrayParamDef ArrayUnit .

    $default  reduce using rule 68 (ArrayParamDef)


State 118

   16 VarDecl: INT . VarDefs SEMI

    IDENT  shift, and go to state 42

    VarDefs  go to state 11
    VarDef   go to state 12


State 119

   86 Stmt: IF . LPAREN Cond RPAREN $@15 Stmt $@16 IF_Else

    LPAREN  shift, and go to state 129


State 120

   77 Stmt: RETURN . SEMI
   78     | RETURN . Exp SEMI

    IDENT   shift, and go to state 28
    SEMI    shift, and go to state 130
    NUMBER  shift, and go to state 29

    Exp         go to state 131
    AddExp      go to state 38
    MulExp      go to state 32
    UnaryExp    go to state 33
    PrimaryExp  go to state 34
    LVal        go to state 35


State 121

   80 Stmt: SEMI .

    $default  reduce using rule 80 (Stmt)


State 122

   75 BlockItem: Decl .

    $default  reduce using rule 75 (BlockItem)


State 123

   79 Stmt: Exp . SEMI

    SEMI  shift, and go to state 132


State 124

   47 PrimaryExp: LVal .
   83 Stmt: LVal . $@14 ASSIGN Exp SEMI

    ASSIGN    reduce using rule 82 ($@14)
    $default  reduce using rule 47 (PrimaryExp)

    $@14  go to state 133


State 125

   81 Stmt: Block .

    $default  reduce using rule 81 (Stmt)


State 126

   71 Block: LCURLY $@13 BlockItems . RCURLY
   73 BlockItems: BlockItems . BlockItem
